# chatgpt_function

./: README.md  pyproject.toml  setup.py  test_chatgpt_function.py
chatgpt_function/: __init__.py  chatgpt_function.py
