[tool.poetry]
name = "chatgpt-function"
version = "0.1.0"
description = ""
authors = ["Ron Heichman <ronheichman@gmail.com>"]
readme = "README.md"
packages = [{include = "chatgpt_function"}]

[tool.poetry.dependencies]
python = "^3.11"
docstring-parser = "^0.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
